phpMyFAQ 2.9.0-dev
Codename "Proteus"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.9.0-dev 2014-
- added frontend dependency management using Bower (Thorsten)
- updated bundled Symfony ClassLoader to version 2.3.7 (Thorsten)

Version 2.8.3 - 2013-10-
- improved HTML / CSS code (Michael Meister)
- updated Brazilian Portuguese translation
- updated Japanese translation
- updated Spanish translation
- update Swedish translation
- fixed some minor bugs (Thorsten)

Version 2.8.2 - 2013-07-25
- added French Canada translation (Jacqueline Gazaille Tétreault)
- improved attachment upload dialog with HTML5 File API (Thorsten)
- updated Finnish translation (Pasi Pajukoski)
- fixed some minor bugs (Thorsten)

Version 2.8.1 - 2013-06-26
- added support for Grunt (Thorsten)
- added minified CSS and JavaScript code (Thorsten)
- improved usability for group administration (Thorsten)
- fixed broken updates for MS SQL and SQLite (Thorsten)
- fixed IE8 related JavaScript issues (Thorsten)
- fixed HTML5 validation errors (Thorsten)
- fixed Arabic translation (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.0 - 2013-05-21
- changed PHP requirement to PHP 5.3.3 and later (Thorsten)
- phpMyFAQ is now licensed under the terms of Mozilla Public License 2.0 (Thorsten, Florian)
- added new and improved frontend and backend user interface based on Twitter Bootstrap (Thorsten)
- added multi site support (Florian, Thorsten)
- added auto-save for FAQs during editing (Anatoliy)
- added improved advanced search in subcategories (Thorsten)
- added possibility to close and delete open questions (Peter Caesar)
- added possibility to delete multiple open questions (Thorsten)
- added user control panel (Thorsten)
- added support for Composer (Thorsten, Alexander M. Turek)
- added online verification check (Thorsten, Florian)
- added configurable maintenance mode (Thorsten)
- added user notification for answered questions (Thorsten)