@@ -402,7 +402,7 @@ pre {
 
 <p><strong>1. <a id="1"></a>Introduction</strong></p>
 
-<p>phpMyFAQ is a multilingual, completely database-driven FAQ-system. It supports various databases to store all data, PHP 5.3.3 (or higher) is needed in order to access this data. phpMyFAQ also offers a multi-language Content Management-System with a WYSIWYG editor and an Image Manager, flexible multi-user support with user and group based permissions on categories and records, a wiki-like revision feature, a news system, user-tracking, language modules, enhanced automatic content negotiation, templates, extensive XML-support, PDF-support, a backup-system, a dynamic site map, related articles, tagging, RSS feeds, built-in spam protection systems, LDAP support, Twitter and Facebook support and an easy to use installation script.</p>
+<p>phpMyFAQ is a multilingual, completely database-driven FAQ-system. It supports various databases to store all data, PHP 5.4.4 (or higher) is needed in order to access this data. phpMyFAQ also offers a multi-language Content Management-System with a WYSIWYG editor and an Image Manager, flexible multi-user support with user and group based permissions on categories and records, a wiki-like revision feature, a news system, user-tracking, language modules, enhanced automatic content negotiation, templates, extensive XML-support, PDF-support, a backup-system, a dynamic site map, related articles, tagging, RSS feeds, built-in spam protection systems, LDAP support, Twitter and Facebook support and an easy to use installation script.</p>
 
 <p>This documentation should help you with installing, administrating and using phpMyFAQ.</p>
 
@@ -462,7 +462,7 @@ pre {
 <li><strong><a href="http://www.php.net">PHP</a></strong>
 
 <ul>
-<li>from version 5.3.3 (recommended: latest PHP 5.x)</li>
+<li>from version 5.4.4 (recommended: latest PHP 5.x)</li>
 <li>register_globals = off</li>
 <li>magic_quotes_gpc = off</li>
 <li>safe_mode = off (recommended)</li>
@@ -498,7 +498,7 @@ pre {
 
 <p>Upload this file to your webspace and open it using your browser. The installation-script checks which version of PHP is installed on your server. Should you not meet the requirements, you cannot start the installation process.</p>
 
-<p>In case you have PHP below 5.3.2 installed you cannot use phpMyFAQ.</p>
+<p>In case you have PHP below 5.4.3 installed you cannot use phpMyFAQ.</p>
 
 <p>phpMyFAQ uses a modern HTML5/CSS3 powered markup. The supported browsers are Mozilla Firefox 3.6 and later (Windows/OS X/Linux), Safari 5.x or later (OS X/Windows/iOS), Chrome 5 or later (Windows/OS X/Linux), Opera 11.0 or later (Windows/OS X/Linux) and Internet Explorer 7 or later for Windows. You have to enable JavaScript for the Ajax based functions as well.</p>
 
